--- a/apps/web/project.inlang/settings.json
+++ b/apps/web/project.inlang/settings.json
@@ -13,12 +13,5 @@
 		"pathPattern": "./messages/{languageTag}.json"
 	},
 	"sourceLanguageTag": "en",
-	"languageTags": [
-		"en",
-		"zh-cn",
-		"es",
-		"ar",
-		"de",
-		"tr"
-	]
+	"languageTags": ["en", "zh-cn", "es", "ar", "de", "tr"]
 }
