--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"useTabs": true,
 	"singleQuote": false,
-	"trailingComma": "some",
+	"trailingComma": "none",
 	"printWidth": 80,
 	"tabWidth": 4,
 	"semi": true,
