--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,9 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
+		"@content-collections/core": "^0.7.3",
+		"@content-collections/markdown": "^0.1.3",
+		"@content-collections/vite": "^0.2.3",
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
@@ -31,6 +34,8 @@
 		"@inlang/paraglide-sveltekit": "^0.11.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"flexsearch": "^0.7.43",
+		"pino": "^9.5.0"
 	}
 }
