--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,12 +22,14 @@
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"eslint-plugin-svelte": "^2.36.0",
-		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
