--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"globals": "^15.13.0",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.17.0",
