--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,23 +15,38 @@
 	},
 	"devDependencies": {
 		"@content-collections/core": "^0.7.3",
-		"@content-collections/markdown": "^0.1.3",
 		"@content-collections/vite": "^0.2.3",
 		"@eslint/compat": "^1.2.3",
+		"@icons-pack/svelte-simple-icons": "4.0.0-rc.4",
 		"@internationalized/date": "^3.6.0",
+		"@shikijs/rehype": "^1.24.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tanstack/svelte-query": "https://pkg.pr.new/@tanstack/svelte-query@28f98f9",
 		"@tanstack/table-core": "^8.20.5",
+		"@types/hast": "^3.0.4",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.67",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.5.1",
 		"eslint-plugin-svelte": "^2.36.0",
 		"formsnap": "2.0.0-next.1",
+		"hast": "^1.0.0",
 		"lucide-svelte": "^0.468.0",
 		"mode-watcher": "^0.5.0",
 		"paneforge": "1.0.0-next.1",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-format": "^5.0.1",
+		"rehype-sanitize": "^6.0.0",
+		"rehype-slug": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-normalize-headings": "^4.0.0",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.1",
+		"remark-toc": "^9.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
@@ -40,7 +55,10 @@
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
 		"tailwindcss-animate": "^1.0.7",
+		"unified": "^11.0.5",
+		"unist-util-visit": "^5.0.0",
 		"vaul-svelte": "1.0.0-next.3",
+		"vfile": "^6.0.3",
 		"vite": "^6.0.0",
 		"zod": "^3.23.8"
 	},
