--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,11 +16,11 @@
 	"devDependencies": {
 		"@content-collections/core": "^0.7.3",
 		"@content-collections/vite": "^0.2.3",
-		"@eslint/compat": "^1.2.3",
 		"@icons-pack/svelte-simple-icons": "4.0.0-rc.4",
 		"@internationalized/date": "^3.6.0",
 		"@shikijs/rehype": "^1.24.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tanstack/svelte-query": "https://pkg.pr.new/@tanstack/svelte-query@28f98f9",
@@ -30,7 +30,6 @@
 		"bits-ui": "1.0.0-next.67",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.5.1",
-		"eslint-plugin-svelte": "^2.36.0",
 		"formsnap": "2.0.0-next.1",
 		"hast": "^1.0.0",
 		"lucide-svelte": "^0.468.0",
