--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		]
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.3",
 		"@changesets/cli": "^2.27.10",
 		"@eslint/js": "^9.16.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.0",
@@ -35,6 +36,7 @@
 		"cross-env": "^7.0.3",
 		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.13.0",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.4.2",
